@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2023 Obeo.
+ * Copyright (c) 2023, 2024 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -28,16 +28,14 @@ export const useDiagramElementPalette = (): UseDiagramElementPaletteValue => {
   const { x, y, isOpened, hideDiagramElementPalette, showDiagramElementPalette } =
     useContext<DiagramElementPaletteContextValue>(DiagramElementPaletteContext);
 
-  const { domNode } = useStoreApi().getState();
-  const element = domNode?.getBoundingClientRect();
+  const store = useStoreApi();
 
-  const onDiagramElementClick = useCallback(
-    (event: React.MouseEvent<Element, MouseEvent>) => {
-      const palettePosition = computePalettePosition(event, element);
-      showDiagramElementPalette(palettePosition.x, palettePosition.y);
-    },
-    [element]
-  );
+  const onDiagramElementClick = useCallback((event: React.MouseEvent<Element, MouseEvent>) => {
+    const { domNode } = store.getState();
+    const element = domNode?.getBoundingClientRect();
+    const palettePosition = computePalettePosition(event, element);
+    showDiagramElementPalette(palettePosition.x, palettePosition.y);
+  }, []);
 
   const escapePressed = useKeyPress('Escape');
   useEffect(() => {
